--- a/wiki/Classes.wiki
+++ b/wiki/Classes.wiki
@@ -1,2 +1,4 @@
-#labels Featured,Phase-Implementation,Phase-Deploy,Phase-Design
+#labels Featured
 =Classes=
+
+* *[http://agul-rep.googlecode.com/svn/trunk/classes/Rational.cpp Rational.cpp]* Library for using rational arithmetics. `note: test`
